--- a/app/views/parliaments/show.html.haml
+++ b/app/views/parliaments/show.html.haml
@@ -11,10 +11,10 @@
     %ul.list--block
       %li
         .list--details
-          %h2= link_to "#{t('mp_plural')}", parliament_members_path(@parliament.graph_id)
+          %h2= link_to(t('mp_plural'), parliament_members_path(@parliament.graph_id))
       %li
         .list--details
-          %h2= link_to "#{t('party_plural').capitalize}", parliament_parties_path(@parliament.graph_id)
+          %h2= link_to(t('party_plural').capitalize, parliament_parties_path(@parliament.graph_id))
       %li
         .list--details
-          %h2= link_to "#{t('constituency_plural').capitalize}", parliament_constituencies_path(@parliament.graph_id)
+          %h2= link_to(t('constituency_plural').capitalize, parliament_constituencies_path(@parliament.graph_id))
