--- a/app/views/people/_image.html.haml
+++ b/app/views/people/_image.html.haml
@@ -1,5 +1,5 @@
 %figure
-  %a{ href: "#{media_show_path(@person.image_id)}" }
+  = link_to(media_show_path(@person.image_id)) do
     %picture
       %source{srcset: "#{ENV['IMAGE_SERVICE_URL']}/#{@person.image_id}.jpeg?crop=CU_5:2&width=732&quality=80, #{ENV['IMAGE_SERVICE_URL']}/#{@person.image_id}.jpeg?crop=CU_5:2&width=1464&quality=80 2x", media: "(min-width: 480px)"}
       %source{srcset: "#{ENV['IMAGE_SERVICE_URL']}/#{@person.image_id}.jpeg?crop=MCU_3:2&width=444&quality=80, #{ENV['IMAGE_SERVICE_URL']}/#{@person.image_id}.jpeg?crop=MCU_3:2&width=888&quality=80 2x"}
