--- a/app/views/people/_related_links.html.haml
+++ b/app/views/people/_related_links.html.haml
@@ -10,17 +10,17 @@
               - if @person.personal_weblinks.present?
                 - @person.personal_weblinks.each do |link|
                   %dt= t('contact_points.website').capitalize + ": "
-                  %dd= link_to link, link
+                  %dd= link_to(link, link)
 
               - if @person.twitter_weblinks.present?
                 - @person.twitter_weblinks.each do |link|
                   %dt= t('contact_points.twitter').capitalize + ": "
-                  %dd= link_to link, link
+                  %dd= link_to(link, link)
 
               - if @person.facebook_weblinks.present?
                 - @person.facebook_weblinks.each do |link|
                   %dt= t('contact_points.facebook').capitalize + ": "
-                  %dd= link_to link, link
+                  %dd= link_to(link, link)
 
           - if Pugin::Feature::Bandiera.show_list_images?
             - if @person.image_id(show_placeholder:false)
