--- a/app/views/people/_when_to_contact.html.haml
+++ b/app/views/people/_when_to_contact.html.haml
@@ -1,6 +1,8 @@
 .dropdown
   .dropdown__toggle
-    %h3= link_to t('.title'), '#'
+    %h3
+      %a{ href: "#"}
+        = t('.title')
   .dropdown__content
     %p= t('.mps_can_help_with')
     %ul.list--bullet
@@ -9,5 +11,5 @@
       %li= t('.immigration')
       %li= t('.school_closures')
       %li= t('.transport')
-    %p= link_to t('.who_else_can_help'), who_should_i_contact_with_my_issue_path
+    %p= link_to(t('.who_else_can_help'), who_should_i_contact_with_my_issue_path)
   %p= t('.contact_postcode')
