--- a/app/views/places/show.html.haml
+++ b/app/views/places/show.html.haml
@@ -4,5 +4,5 @@
     %ol.list--block
       %li
         .list--details
-          %h2= link_to t('constituency_plural').capitalize, places_show_constituencies_path(@place.gss_code)
+          %h2= link_to(t('constituency_plural').capitalize, places_show_constituencies_path(@place.gss_code))
           %p= "#{@place.constituency_count} #{t('constituency_plural').capitalize}"
