--- a/app/views/people/_timeline_roles.html.haml
+++ b/app/views/people/_timeline_roles.html.haml
@@ -2,20 +2,21 @@
   %li
     .list--details
       - if RoleHelper.role_type(role, 'SeatIncumbency')
-        - date_string = role.try(:start_date) && role.try(:end_date) ? " (#{l(role.start_date, format: :year_only)} #{t('to')} #{l(role.end_date, format: :year_only)})" : ''
-        - if role.class == GroupingHelper::GroupedObject
-          - role_type_start = t('.mp_for')
-          - role_type_link = link_to("#{role.nodes[0].constituency.name} #{date_string}", constituency_path(role.nodes[0].constituency.graph_id))
-          - role_type = "#{role_type_start} #{role_type_link}".html_safe
-          = render 'timeline_role', role: role, role_type: role_type, role_title: "Elected #{role.nodes.count} times"
-        - else
-          - role_type_start = t('.mp_for')
-          - role_type_link = link_to("#{role.constituency.name} #{date_string}", constituency_path(role.constituency.graph_id))
-          - role_type = "#{role_type_start} #{role_type_link}".html_safe
-          = render 'timeline_role', role: role, role_type: role_type, role_title: t('.parliamentary_role').capitalize
+        - if role.class == GroupingHelper::GroupedObject || role&.house_of_commons?
+          - date_string = role.try(:start_date) && role.try(:end_date) ? " (#{l(role.start_date, format: :year_only)} #{t('to')} #{l(role.end_date, format: :year_only)})" : ''
+          - if role.class == GroupingHelper::GroupedObject
+            - role_type_start = t('.mp_for')
+            - role_type_link = link_to("#{role.nodes[0].constituency.name} #{date_string}", constituency_path(role.nodes[0].constituency.graph_id))
+            - role_type = "#{role_type_start} #{role_type_link}".html_safe
+            = render 'timeline_role', role: role, role_type: role_type, role_title: "Elected #{role.nodes.count} times"
+          - else
+            - role_type_start = t('.mp_for')
+            - role_type_link = link_to("#{role.constituency.name} #{date_string}", constituency_path(role.constituency.graph_id))
+            - role_type = "#{role_type_start} #{role_type_link}".html_safe
+            = render 'timeline_role', role: role, role_type: role_type, role_title: t('.parliamentary_role').capitalize
 
-      - elsif RoleHelper.role_type(role, 'HouseIncumbency')
-        = render 'timeline_role', role: role, role_type: "#{t('member').capitalize} #{t('of_the')} #{t('house_of_lords')}", role_title: t('.house_of_lords_role')
+        - elsif role.house_of_lords?
+          = render 'timeline_role', role: role, role_type: "#{t('member').capitalize} #{t('of_the')} #{t('house_of_lords')}", role_title: t('.house_of_lords_role')
 
       - elsif RoleHelper.role_type(role, 'FormalBodyMembership')
         = render 'timeline_role', role: role, role_type: "#{t('member').capitalize} #{t('of_the')} #{role.formal_body.name}", role_title: t('.committee_role').capitalize
